fix filter list display on mobile

--- a/css/artist.css
+++ b/css/artist.css
@@ -275,6 +275,7 @@
 	border: 1px solid black;
 	border-radius: 10px;
 	width: 20%;
+	min-width: 250px;
 }
 
 /* Checkbox styling */
